# python-fastapi-to-do-list-with-authorization

./: .env  LICENSE  config.py  database.py  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 59841aa9c299_initial.py
tasks/: DAO.py  model.py  router.py  schemas.py
users/: DAO.py  auth.py  model.py  router.py  schemas.py
users/auth/: auth.py
